# pdf-gen

./: Cargo.toml  README.md  src-book.toml
examples/: bookmarks.rs  graph-paper.rs  hello-world.rs  image.rs  lorem-ipsum.rs  svg.rs  text-layout.rs
src/: colour.rs  content.rs  document.rs  error.rs  font.rs  form_xobject.rs  image.rs  info.rs  layout.rs  lib.rs  outline.rs  page.rs  pagesize.rs  rect.rs  refs.rs  transform.rs  units.rs
src/layout/: margins.rs  mod.rs  text.rs
