[package]
name = "pdf-gen"
version = "0.1.0"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A mid-level, opionated library for generating PDF documents"
repository = "https://github.com/hamaluik/pdf-gen"
homepage = "https://github.com/hamaluik/pdf-gen"
readme = "README.md"
license = "Apache-2.0"
keywords = ["pdf"]
categories = ["encoding", "multimedia::encoding"]

[dependencies]
pdf-writer = "0.6"
ttf-parser = "0.15"
chrono = "0.4"
lipsum = "0.8"
image = "0.24"
thiserror = "1"
miniz_oxide = "0.5"
usvg = "0.22"
svg2pdf = "0.4"
derive_more = "0.99"
