[package]
name = "pdf-gen"
version = "0.1.0"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A mid-level, opionated library for generating PDF documents"
repository = "https://github.com/hamaluik/pdf-gen"
homepage = "https://github.com/hamaluik/pdf-gen"
readme = "README.md"
license = "Apache-2.0"
keywords = ["pdf"]
categories = ["encoding", "multimedia::encoding"]

[dependencies]
pdf-writer = "0.12.1"
owned_ttf_parser = "0.15"
chrono = "0.4"
lipsum = "0.8"
image = "0.24"
thiserror = "2"
miniz_oxide = "0.5"
usvg = "0.45"
svg2pdf = "0.13"
derive_more = { version = "2", features = ["add", "add_assign", "deref", "deref_mut", "display", "from", "into", "mul_assign", "sum"] }
id-arena = "2"
